# PantherSecurity

./: .gitignore  README.md  settings.gradle.kts
FindMyMovies/: settings.gradle.kts
FindMyMovies/androidApp/: build.gradle.kts
FindMyMovies/gradle/wrapper/: gradle-wrapper.properties
FindMyMovies/shared/: build.gradle.kts
agent/cli/: Cargo.toml
agent/cli/src/: lib.rs  main.rs
androidApp/: build.gradle.kts
backend/policy-service/: Cargo.toml
backend/policy-service/src/: main.rs
backend/telemetry-ingestion/: Cargo.toml
backend/telemetry-ingestion/src/: main.rs
core/rust-core/: Cargo.toml
core/rust-core/include/: panther_security.h
core/rust-core/src/: lib.rs  sdk.rs
core/rust-core/src/adapters/: ffi.rs  http.rs  mod.rs  serialization.rs
core/rust-core/src/app/: core_service.rs  mod.rs
core/rust-core/src/domain/: mod.rs  pinning.rs  policy.rs  risk.rs  telemetry.rs
core/rust-core/src/ports/: mod.rs
docs/: api-contracts.md  architecture.md  mvp.md  openapi.yaml  roadmap.md
docs/security-examples/: README.md  attestation.md  bola-idor.md  debugger-hooking.md  device-integrity-jailbreak-root.md  mitm-proxy-pinning.md  risk-score.md
mobile/android/: README.md  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/ios/: Package.swift
mobile/ios/Tests/: AppTests.swift
mobile/ios/sampleIOS/: Package.swift  Project.swift  README.md  Tuist.swift
scripts/: build-ios-xcframework.sh  install-ios-xcframework.sh  run-backend.sh  run-policy-service.sh  run-telemetry-ingestion.sh
shared/: build.gradle.kts
(+63 files in other folders)
