[package]
name = "rust-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["clock"] }
